--- a/android/src/main/res/layout/vonage_view.xml
+++ b/android/src/main/res/layout/vonage_view.xml
@@ -18,9 +18,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:elevation="0dp"/>
-
         <FrameLayout
-            android:id="@+id/publisher_container"
             android:layout_width="90dp"
             android:layout_height="120dp"
             android:layout_gravity="top|end"
@@ -28,9 +26,16 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:background="#CCCCCC"
-            android:padding="2dp"
-            android:elevation="2dp"/>
+            android:background="@drawable/bg_rounded"
+            android:clipChildren="true"
+            android:padding="2dp">
+
+            <FrameLayout
+                android:id="@+id/publisher_container"
+                android:layout_width="95dp"
+                android:layout_height="125dp"
+                android:layout_gravity="center" />
+        </FrameLayout>
 
     </FrameLayout>
 
